/location/{location} returns valid JSON now
